[dev] swagger update
